[gd_scene load_steps=2 format=3 uid="uid://b4ie6rl6k8udx"]

[ext_resource type="Script" uid="uid://dbpdsnma125fg" path="res://setting_menu.gd" id="1_3iptn"]

[node name="Setting_Menu" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_3iptn")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
layout_mode = 0
offset_right = 592.0
offset_bottom = 358.0
color = Color(0.470076, 0.470076, 0.470076, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 593.0
offset_bottom = 358.0

[node name="Master" type="Control" parent="Panel"]
anchors_preset = 0

[node name="Master Volume2" type="HSlider" parent="Panel/Master"]
offset_left = 27.0
offset_top = 59.0
offset_right = 471.0
offset_bottom = 75.0
value = 50.0

[node name="Master Volume" type="Label" parent="Panel/Master"]
offset_left = 13.0
offset_top = 24.0
offset_right = 770.0
offset_bottom = 125.0
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/font_size = 100
text = "Master Volume"

[node name="CheckBox1" type="CheckBox" parent="Panel/Master"]
offset_left = 564.0
offset_top = 54.0
offset_right = 588.0
offset_bottom = 78.0

[node name="mute" type="Label" parent="Panel/Master"]
offset_left = 512.0
offset_top = 56.0
offset_right = 562.0
offset_bottom = 73.0
text = "mute"

[node name="Song" type="Control" parent="Panel"]
visible = false
anchors_preset = 0
offset_top = 67.0
offset_bottom = 67.0

[node name="Song Volume2" type="HSlider" parent="Panel/Song"]
offset_left = 27.0
offset_top = 59.0
offset_right = 471.0
offset_bottom = 75.0
value = 50.0

[node name="Song Volume" type="Label" parent="Panel/Song"]
offset_left = 13.0
offset_top = 24.0
offset_right = 770.0
offset_bottom = 125.0
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/font_size = 100
text = "Song Volume"

[node name="CheckBox2" type="CheckBox" parent="Panel/Song"]
offset_left = 564.0
offset_top = 54.0
offset_right = 588.0
offset_bottom = 78.0

[node name="mute" type="Label" parent="Panel/Song"]
offset_left = 512.0
offset_top = 56.0
offset_right = 562.0
offset_bottom = 73.0
text = "mute"

[node name="Sfx" type="Control" parent="Panel"]
visible = false
anchors_preset = 0
offset_top = 138.0
offset_bottom = 138.0

[node name="Sfx Volume2" type="HSlider" parent="Panel/Sfx"]
offset_left = 27.0
offset_top = 59.0
offset_right = 471.0
offset_bottom = 75.0
value = 50.0

[node name="Sfx Volume" type="Label" parent="Panel/Sfx"]
offset_left = 13.0
offset_top = 24.0
offset_right = 770.0
offset_bottom = 125.0
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/font_size = 100
text = "Sfx Volume"

[node name="CheckBox3" type="CheckBox" parent="Panel/Sfx"]
offset_left = 564.0
offset_top = 54.0
offset_right = 588.0
offset_bottom = 78.0

[node name="mute" type="Label" parent="Panel/Sfx"]
offset_left = 512.0
offset_top = 56.0
offset_right = 562.0
offset_bottom = 73.0
text = "mute"

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = 241.0
offset_top = 285.0
offset_right = 341.0
offset_bottom = 335.0
text = "Close"

[connection signal="value_changed" from="Panel/Master/Master Volume2" to="." method="_on_master_volume_2_value_changed"]
[connection signal="toggled" from="Panel/Master/CheckBox1" to="." method="_on_check_box_1_toggled"]
[connection signal="value_changed" from="Panel/Song/Song Volume2" to="." method="_on_song_volume_2_value_changed"]
[connection signal="toggled" from="Panel/Song/CheckBox2" to="." method="_on_check_box_2_toggled"]
[connection signal="value_changed" from="Panel/Sfx/Sfx Volume2" to="." method="_on_sfx_volume_2_value_changed"]
[connection signal="toggled" from="Panel/Sfx/CheckBox3" to="." method="_on_check_box_3_toggled"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
